--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,10 @@ buildscript {
     }
 }
 
+task wrapper(type: Wrapper) {
+  gradleVersion = '2.1'
+}
+
 allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
