update libgdx version

--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
     
-    version = "1.0"
+    version = "0.3"
     ext {
         appName = "SkinEditor"
-        gdxVersion = "1.0.2-SNAPSHOT"
+        gdxVersion = "1.3.1"
     }
     
     repositories {
