--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ allprojects {
     ext {
         appName = "SkinEditor"
         gdxVersion = "1.3.1"
+        DermetfanUtilsVersion = '0.5.1-SNAPSHOT'
     }
     
     repositories {
@@ -31,7 +32,8 @@ project(":core") {
     
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils:$DermetfanUtilsVersion"
    }
 }
 
@@ -42,6 +44,7 @@ project(":desktop") {
         compile project(":core")
         compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        compile "net.dermetfan.libgdx-utils:libgdx-utils:$DermetfanUtilsVersion"
      }
 }
 
